--- a/src/capitoli/capitolo-1.tex
+++ b/src/capitoli/capitolo-1.tex
@@ -13,6 +13,14 @@
     Nel corso degli anni è nata e cresciuta \textbf{Zextras Suite}, una raccolta di estensioni che permettono di arricchire \gls{zcsg} con nuove funzionalità utili nel suo utilizzo in ambito professionale.
     Le soluzioni proposte da \textbf{Zextras} con i sui prodotti vengono da subito apprezzate da \textbf{Synacor}, l'azienda che sviluppa e mantiene \gls{zcsg}, la quale decide di includere parte del suo codice nella versione \gls{opensg}. Attualmente i prodotti sviluppati dall'azienda vengono utilizzati da più di 100 milioni di utenti in tutto il mondo.
 
+    \begin{figure}[h]
+            \centering
+            \includegraphics[width=0.8\textwidth]{immagini/opensource.jpeg}
+            \caption{\textit{Open source}}
+            \textbf{Fonte}:\href{https://miro.medium.com/max/2048/1*MnJBb5qalimr1Ji7bKJctQ.jpeg}{medium.com}
+            \label{fig: Open source}
+        \end{figure}
+
 \section{Dominio applicativo}
     \subsection{Zimbra Open Source Edition}
         \textbf{Zextras}, come già accennato, è nata con l'obiettivo di creare nuovi contenuti per \gls{zcsg} facendone quindi il suo \textit{core business}.
@@ -48,7 +56,7 @@
             \centering
             \includegraphics[width=0.7\textwidth]{immagini/zextras_suite.png}
             \caption{Zextras \textit{suite}}
-            \textbf{Fonte: }\href{https://www.zimbra-zextras.pl/}{zimbra-zextras.pl}
+            \textbf{Fonte}:\href{https://www.zimbra-zextras.pl/}{zimbra-zextras.pl}
             \label{fig: Zextras suite}
         \end{figure}
         
@@ -67,9 +75,20 @@
             \end{itemize}
     \end{itemize}
 
+\newpage
+
 \section{Processi aziendali}
     I processi sono un tassello di estrema importanza all'interno di un'azienda che si pone degli obiettivi ben definiti, soprattutto quando questi sono particolarmente ambiziosi e raggiungibili tramite lo sviluppo di prodotti complessi e di grandi dimensioni. Sono inoltre fondamentali qual\'{o}ra l'azienda avesse al suo interno dei reparti che svolgono mansioni molto differenti tra loro. \\
     Al fine di orchestrare e mettere in funzione tutti i settori dell'azienda affinché questi lavorino in modo coeso, è necessario ricorrere alla definizione e istanziazione di processi, i quali permettono di stabilire con precisione quali sono le attività da svolgere e il modo più strategico per portarle a termine, al fine di raggiungere gli obiettivi prefissati.
+    
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=1\textwidth]{immagini/process.jpg}
+        \caption{Processi}
+        \textbf{Fonte}: \href{https://www.keyideasinfotech.com/wp-content/uploads/blog/Web-and-e-commerce-software-development-processes.jpg}{keyideasinfotech.com}
+        \label{fig: Processi}
+    \end{figure}
+    
     \subsection{Fornitura}
         La grande diffusione di \gls{zcsg} in molteplici ambiti, contribuisce alla necessità di nuove funzionalità e al miglioramento di quelle già esistenti. Per questo motivo \textbf{Zextras} ottiene spesso nuovi incarichi e nuovi progetti da sviluppare. \\
         La ricerca di nuovi progetti avviene tramite il \textit{CEO} dell'azienda e il \textit{Project Manager}. Oltre all'esigenze dei clienti, nascono dei progetti anche interni dell'azienda stessa che derivano, ad esempio, dalla necessità di migliorare i processi interni con dei nuovi strumenti. \\
@@ -123,6 +142,8 @@
         \label{fig: Scrum flow}
     \end{figure}
 
+\newpage
+
 \subsection{Gestione di progetto}
     La gestione del progetto viene supportata principalmente da due strumenti:
     \begin{itemize}
@@ -130,10 +151,10 @@
         \item \textbf{\gls{zcsg}}: offre, tra i tanti servizi, il calendario per la gestione degli eventi interni all'azienda, per esempio le riunioni e la possibilità di lavorare su documenti condivisi, per esempio i fogli di calcolo utilizzati per il tracciamento delle ore durante lo \textit{Sprint Planning} come descritto nella sezione precedente. 
     \end{itemize}
 
-\newpage
-
 \subsection{Documentazione}
     La documentazione di tutti i team di sviluppo è raccolta in un unico punto accessibile a tutti. Per ottenere ciò viene utilizzato il \textit{software} di collaborazione \textbf{Confluence} sviluppato da \textbf{Atlassian}, il quale offre un editor di tipo \textit{\gls{wysiwygg}} che permette di scrivere documenti completi e ben formattati oltre a fornire un sistema di catalogazione molto flessibile e personalizzabile.
+
+\newpage
 
 \subsection{Configurazione}\label{sec:configurazione}
 Gli strumenti per il versionamento del codice utilizzati sono i seguenti:
@@ -151,7 +172,7 @@ Per lo sviluppo di nuove funzionalità viene utilizzato un \textit{\gls{workflow
 \end{enumerate}
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.55\textwidth]{immagini/git_flow.png}
+        \includegraphics[width=0.8\textwidth]{immagini/git_flow.png}
         \caption{\textit{Gitflow}}
         \textbf{Fonte:} \href{https://www.codewall.co.uk/a-git-flow-explainer-how-to-tutorial/}{codewall.co.uk}
         \label{fig: Gitflow}
